# bout-merge

./: .gitignore  CMakeLists.txt  bout++Config.cmake.in  configure.Cori.zhu  configure.cab  configure.cori  configure.edison  configure.franklin  configure.hopper  configure.nersc  grep4
cmake/: FindNetCDF.cmake  FindPETSc.cmake
examples/: makefile
examples/3f-trans-coupling/: README  README.md  cbm18_dens4_68x64.nc  cbm18_dens4_68x64_couple.nc  debug-elm.sh  debug-elm0.sh  debug-flux.sh  debug-pei.sh  debug-trans.sh  debug-trans0.sh  elm_pb_couple.cxx  flux_save.py  makefile  makefile.elm  makefile.trans  pei_save.py  trans_er_couple.cxx
examples/6f_SBC/: edison_debug.cmd  elm_6f_nonlinear_cbm.cxx
examples/6f_divertor/: BOUT.inp  README  bout_hopper_debug.cmd  elm_6f.cxx  elm_6f_git.cxx  gr_n15_cbm18_8_y064_x516_090309.ps  gr_n15_cbm18_dens8.grid_nx68ny64.ps
examples/6f_divertor_imp/: BOUT.inp  CMakeLists.txt  elm_6f.cxx  elm_6f_SBC.cxx  elm_6f_neo.cxx  elm_6f_neo_B0.cxx  elm_6f_neo_Bbar.cxx  elm_6f_neo_Erexp.cxx  elm_6f_neo_floatsheath.cxx  elm_6f_v2.cxx  makefile
examples/6f_landau/: 6f_landau_dev7.cxx  BOUT.inp_6f_landau  BOUT.inp_6f_landau_dev7  CMakeLists.txt  elm_6f.cxx
examples/6field-simple/: elm_6f.cxx
examples/Er0_eq/: Readme  prof_fit.pro
examples/SMBI/: boundary_standard.cxx  boundary_standard.hxx  gfwrite.pro  lineaverz.pro  mymovie.pro  trans_neu.cxx
examples/couple-elmpb-transneut/: batch.sh  (+1 more)
examples/dev7_tfmultip_outputdiamag/: CMakeLists.txt
include/: difops.hxx  field3d.hxx  integrops.hxx  invert_laplace.hxx  invert_parderiv.hxx
(+1274 files in other folders)
